--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-CONNECTION_URL = "mongodb+srv://beto:4BTkvc9B3rcRsZOC@cluster0.nf0fd.mongodb.net/Cluster0?retryWrites=true&w=majority";
+CONNECTION_URL = "mongodb+srv://:@cluster0g6hh3.mongodb.net/myFirstDatabase?retryWrites=true&w=majority";
